# video_segment

cmake/: FindOpenCV2.cmake
optical_flow/: CMakeLists.txt  COOrdSparseMat.cpp  COOrdSparseMat.h  CRSSparseMat.cpp  Decomposition.cpp  Decomposition.h  FArray.h  FlowError.cpp  FlowError.h  FlowOperator.h  FlowUtils.cpp  FlowUtils.h  GaussPyramid.h  OpticalFlowParams.h  PenaltyFunctionCompute.h  UtilsDebug.h  UtilsMat.h  WeightedMedianFilter.cpp  WeightedMedianFilter.h  coarse2FineCompute.cpp  coarse2FineCompute.h  cvShowManyImages.cpp  depend.cmake  image_tester.cpp
optical_flow/optflowb/: COOrdSparseMat.cpp  CRSSparseMat.h  Decomposition.cpp  Decomposition.h  FlowError.cpp  FlowError.h  FlowOperator.cpp  FlowOperator.h  FlowUtils.cpp  GaussPyramid.h  image_tester.cpp
seg_tree_sample/: depend.cmake
segment_color_scorer/: CMakeLists.txt  scorer.cpp
segment_color_viz/: CMakeLists.txt  visualizer.cpp
segment_converter/: converter.cpp
segment_converter/html/: load_frames.html  video.webm
segment_renderer/: CMakeLists.txt
segment_scorer/: CMakeLists.txt  scorer.cpp
segment_util/: depend.cmake  segmentation_io.cpp  segmentation_util.cpp
segmentation/: region_descriptor.cpp
video_framework/: conversion_units.cpp  flow_reader.cpp  flow_reader.h  video_capture_unit.cpp  video_pipeline.cpp  video_reader_unit.cpp  video_writer_unit.cpp
